force-app/main/default/objects/Paybale__c/Paybale__c.object-meta.xml
<CustomObject>
    <label>Payable</label>
    <nameField>
        <label>Paybales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paybales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>