force-app/main/default/objects/Paybale__c/fields/Execution_Request_Document_Handler__c.field-meta.xml
<CustomField>
    <fullName>Execution_Request_Document_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Request Document Handler</label>
    <referenceTo>Document_Handler__c</referenceTo>
    <relationshipLabel>Paybales</relationshipLabel>
    <relationshipName>Paybales</relationshipName>
    <type>Lookup</type>
</CustomField>