force-app/main/default/objects/Paybale__c/fields/Execution_Request_Processed__c.field-meta.xml
<CustomField>
    <fullName>Execution_Request_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execution Request Processed</label>
    <type>Checkbox</type>
</CustomField>