force-app/main/default/objects/Paybale__c/fields/Finacial_Entity_Details__c.field-meta.xml
<CustomField>
    <fullName>Finacial_Entity_Details__c</fullName>
    <label>Finacial Entity Details</label>
    <referenceTo>Financial_Entity__c</referenceTo>
    <relationshipLabel>Paybales</relationshipLabel>
    <relationshipName>Paybales</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>