force-app/main/default/objects/Paybale__c/fields/Financial_Entity_A_C_Details__c.field-meta.xml
<CustomField>
    <fullName>Financial_Entity_A_C_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Entity A/C Details</label>
    <referenceTo>Financial_Entity_AC_Detail__c</referenceTo>
    <relationshipName>Paybales</relationshipName>
    <type>Lookup</type>
</CustomField>