force-app/main/default/objects/Paybale__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Payable_Payee_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>UPI</fullName>
            </value>
            <value>
                <fullName>Sanction Amount</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>