force-app/main/default/objects/Paybale__c/fields/Payable_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Payable_File_Name__c</fullName>
    <formula>Financial_Account__r.Name + &apos;-&apos;+ RIGHT(Id,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable File Name</label>
    <type>Text</type>
</CustomField>