force-app/main/default/objects/Paybale__c/fields/Payable_Payee_Type__c.field-meta.xml
<CustomField>
    <fullName>Payable_Payee_Type__c</fullName>
    <label>Payable Payee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payee_Type_Entity_Type</valueSetName>
    </valueSet>
</CustomField>