force-app/main/default/objects/Paybale__c/fields/Payee_Type__c.field-meta.xml
<CustomField>
    <fullName>Payee_Type__c</fullName>
    <formula>text(Finacial_Entity_Details__r.Entity_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee Type</label>
    <type>Text</type>
</CustomField>