force-app/main/default/objects/Paybale__c/fields/RBI_UTR_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>RBI_UTR_Reference_Number__c</fullName>
    <label>RBI/UTR Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>