force-app/main/default/objects/Paybale__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Memo Created</fullName>
            </value>
            <value>
                <fullName>Memo Cancelled</fullName>
            </value>
            <value>
                <fullName>Accepted By Bank</fullName>
            </value>
            <value>
                <fullName>Submitted For Execution</fullName>
            </value>
            <value>
                <fullName>Request Cancellation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>