force-app/main/default/objects/Paybale__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sanction Amount</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Processing Fee</fullName>
            </value>
            <value>
                <fullName>Processing Fee GST</fullName>
            </value>
            <value>
                <fullName>CERSAI</fullName>
            </value>
            <value>
                <fullName>CERSAI GST</fullName>
            </value>
            <value>
                <fullName>Pre EMI Principal</fullName>
            </value>
            <value>
                <fullName>Pre EMI Interest</fullName>
            </value>
            <value>
                <fullName>EMI Principal</fullName>
            </value>
            <value>
                <fullName>EMI Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>