force-app/main/default/objects/Paybale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Finacial_Entity_Details__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>Financial_Entity_A_C_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Mode__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>